2004-07-29  Guilhem Lavaux <guilhem@kaffe.org>

	* libraries/javalib/Klasses.jar.bootstrap: Regenerated.

	* include/Makefile.am: Added header generation for
	java/lang/VMObject and java/lang/VMThread.

	* test/regression/ThreadStop.java:
	Removed file.
	
	* kaffe/kaffevm/exception.c
	(unhandledException): ThreadDeath should not be unhandled anymore
	now. VMThread handles it.

	* kaffe/kaffevm/gcRefs.c
	(liveThreadWalker): Mark both a Thread and a VMThread instance.

	* kaffe/kaffevm/locks.h
	(KAFFE_STATIC_LOCK_INITIALIZER): Completed initializer.

	* kaffe/kaffevm/thread.c,
	kaffe/kaffevm/thread.h: Updated to GNU Classpath's thread
	infrastructure. Removed unused code.
	(setPriorityThread,startThread,stopThread,interruptThread,
	finalizeThread, nameThread): New prototype.
	(firstStartThread): We do not need to handle exceptions anymore as
	this is already done by VMThread.
	(getCurrentVMThread): New function.

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c
	(suspendOnQThread): Clear INTERRUPTED_READ flag.
	(jthread_interrupted): New function.

	* kaffe/kaffevm/systems/unix-jthreads/jthread.h
	(THREAD_FLAGS_INTERRUPTED_READ): New flag.
	(jthread_interrupted): New function.

	* kaffe/kaffevm/systems/unix-pthreads/lock-impl.c
	(jcondvar_wait): Set the interrupt status to the correct
	value according to the return value.
	
	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c
	(waitForTimeOut, waitForWritable): Set the interrupt status to the
	correct value according to errno.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_interrupt): Set the interrupt status to 1.
	(jthread_is_interrupted): New function.
	(jthread_interrupted): New function.

	* kaffe/kaffevm/systems/unix-pthreads/thread-internal.h
	(jthread_t.interrupting): New field.
	(jthread_is_interrupted): Removed.

	* libraries/clib/native/Object.c
	(java_lang_VMObject_clone): Renamed from java_lang_Object_clone.
	(java_lang_VMObject_nativeWait): Renamed from
	java_lang_Object_wait0.